--- a/csv_merge.ipynb
+++ b/csv_merge.ipynb
@@ -9,19 +9,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added Publication Date to TOP500_199306.csv\n",
+      "Added Publication Date to TOP500_199311.csv\n",
+      "Added Publication Date to TOP500_199406.csv\n",
+      "Added Publication Date to TOP500_199411.csv\n",
+      "Added Publication Date to TOP500_199506.csv\n",
+      "Added Publication Date to TOP500_199511.csv\n",
+      "Added Publication Date to TOP500_199606.csv\n",
+      "Added Publication Date to TOP500_199611.csv\n",
+      "Added Publication Date to TOP500_199706.csv\n",
+      "Added Publication Date to TOP500_199711.csv\n",
+      "Added Publication Date to TOP500_199806.csv\n",
+      "Added Publication Date to TOP500_199811.csv\n",
+      "Added Publication Date to TOP500_199906.csv\n",
+      "Added Publication Date to TOP500_199911.csv\n",
+      "Added Publication Date to TOP500_200006.csv\n",
+      "Added Publication Date to TOP500_200011.csv\n",
+      "Added Publication Date to TOP500_200106.csv\n",
+      "Added Publication Date to TOP500_200111.csv\n",
+      "Added Publication Date to TOP500_200206.csv\n",
+      "Added Publication Date to TOP500_200211.csv\n",
+      "Added Publication Date to TOP500_200306.csv\n",
+      "Added Publication Date to TOP500_200311.csv\n",
+      "Added Publication Date to TOP500_200406.csv\n",
+      "Added Publication Date to TOP500_200411.csv\n",
+      "Added Publication Date to TOP500_200506.csv\n",
+      "Added Publication Date to TOP500_200511.csv\n",
+      "Added Publication Date to TOP500_200606.csv\n",
+      "Added Publication Date to TOP500_200611.csv\n",
+      "Added Publication Date to TOP500_200706.csv\n",
+      "Added Publication Date to TOP500_200711.csv\n",
+      "Added Publication Date to TOP500_200806.csv\n",
+      "Added Publication Date to TOP500_200811.csv\n",
+      "Added Publication Date to TOP500_200906.csv\n",
+      "Added Publication Date to TOP500_200911.csv\n",
+      "Added Publication Date to TOP500_201006.csv\n",
+      "Added Publication Date to TOP500_201011.csv\n",
+      "Added Publication Date to TOP500_201106.csv\n",
+      "Added Publication Date to TOP500_201111.csv\n",
+      "Added Publication Date to TOP500_201206.csv\n",
+      "Added Publication Date to TOP500_201211.csv\n",
+      "Added Publication Date to TOP500_201306.csv\n",
+      "Added Publication Date to TOP500_201311.csv\n",
+      "Added Publication Date to TOP500_201406.csv\n",
+      "Added Publication Date to TOP500_201411.csv\n",
+      "Added Publication Date to TOP500_201506.csv\n",
+      "Added Publication Date to TOP500_201511.csv\n",
+      "Added Publication Date to TOP500_201606.csv\n",
+      "Added Publication Date to TOP500_201611.csv\n",
+      "Added Publication Date to TOP500_201706.csv\n",
+      "Added Publication Date to TOP500_201711.csv\n",
+      "Added Publication Date to TOP500_201806.csv\n",
+      "Added Publication Date to TOP500_201811.csv\n",
+      "Added Publication Date to TOP500_201906.csv\n",
+      "Added Publication Date to TOP500_201911.csv\n",
+      "Added Publication Date to TOP500_202006.csv\n",
+      "Added Publication Date to TOP500_202011.csv\n",
+      "Added Publication Date to TOP500_202106.csv\n",
+      "Added Publication Date to TOP500_202111.csv\n",
+      "Added Publication Date to TOP500_202206.csv\n",
+      "Added Publication Date to TOP500_202211.csv\n",
+      "Added Publication Date to TOP500_202306.csv\n",
+      "Added Publication Date to TOP500_202311.csv\n",
+      "Added Publication Date to TOP500_202406.csv\n",
+      "Added Publication Date to TOP500_202411.csv\n"
+     ]
+    }
+   ],
    "source": [
     "#Note that the csv generation file needs to be run first for this to work (assuming only user access is to the excel files)\n",
     "\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "\n",
+    "def add_publication_date(input_folder, output_folder):\n",
+    "    # Create the output folder if it doesn't exist\n",
+    "    os.makedirs(output_folder, exist_ok=True)\n",
+    "\n",
+    "    for filename in os.listdir(input_folder):\n",
+    "        if filename.endswith('.csv'):\n",
+    "            input_path = os.path.join(input_folder, filename)\n",
+    "            output_path = os.path.join(output_folder, filename)\n",
+    "\n",
+    "            # Extract date from filename\n",
+    "            date_str = filename[-10:-4]  # Extract YYYYMM\n",
+    "            date = datetime.strptime(date_str, '%Y%m')\n",
+    "            formatted_date = date.strftime('%m/%Y')\n",
+    "\n",
+    "            # Read CSV\n",
+    "            df = pd.read_csv(input_path)\n",
+    "\n",
+    "            # Add Publication Date column\n",
+    "            df['Publication Date'] = formatted_date\n",
+    "\n",
+    "            # Save updated CSV\n",
+    "            df.to_csv(output_path, index=False)\n",
+    "            print(f\"Added Publication Date to {filename}\")\n",
+    "\n",
+    "# Set up input and output folders\n",
+    "current_dir = os.getcwd()\n",
+    "input_folder = os.path.join(current_dir, 'csv_files')\n",
+    "output_folder = os.path.join(current_dir, 'updated_csv_files')\n",
+    "\n",
+    "# Process CSV files\n",
+    "add_publication_date(input_folder, output_folder)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Merged CSV saved to c:\\VSCode\\top500_data\\merged_top500_nans.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "#Note that over the years, new data was tested and analyzed, so things like power may not have always been covered. In this merge, those columns are left blank (Nan) when applicable\n",
+    "\n",
+    "def merge_csv_files(input_folder, output_file):\n",
+    "    # Get a list of all CSV files in the input folder\n",
+    "    csv_files = [f for f in os.listdir(input_folder) if f.endswith('.csv')]\n",
+    "    \n",
+    "    # Read and store all DataFrames in a list\n",
+    "    dfs = []\n",
+    "    for file in csv_files:\n",
+    "        file_path = os.path.join(input_folder, file)\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        dfs.append(df)\n",
+    "    \n",
+    "    # Concatenate all DataFrames\n",
+    "    merged_df = pd.concat(dfs, ignore_index=True, sort=False)\n",
+    "    \n",
+    "    # Save the merged DataFrame to a new CSV file\n",
+    "    merged_df.to_csv(output_file, index=False)\n",
+    "    print(f\"Merged CSV saved to {output_file}\")\n",
+    "\n",
+    "# Set up input and output paths\n",
+    "current_dir = os.getcwd()\n",
+    "input_folder = os.path.join(current_dir, 'updated_csv_files')\n",
+    "output_file = os.path.join(current_dir, 'merged_top500_nans.csv')\n",
+    "\n",
+    "# Merge CSV files\n",
+    "merge_csv_files(input_folder, output_file)\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
