enhance notebook documentation with detailed overview and usage instructions

--- a/csv_clean.ipynb
+++ b/csv_clean.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initial Cleaning"
+    "## Notebook Overview\n",
+    "\n",
+    "This notebook is designed to clean and preprocess a dataset of the top 500 supercomputers. The main tasks performed in this notebook include:\n",
+    "\n",
+    "1. **Importing Necessary Libraries**:\n",
+    "    - The notebook imports essential libraries such as `pandas` and `os` for data manipulation and file operations.\n",
+    "\n",
+    "2. **Defining Column Groups**:\n",
+    "    - `COLUMN_GROUPS` and `COLUMN_MAPPING` dictionaries are defined to group similar columns together. This helps in merging columns with similar data but different names.\n",
+    "\n",
+    "3. **Unit Conversions**:\n",
+    "    - The `UNIT_CONVERSIONS` dictionary is used to convert units of specific columns to maintain consistency across the dataset.\n",
+    "\n",
+    "4. **Data Cleaning Functions**:\n",
+    "    - `combine_columns(df)`: Merges similar columns into a single column, keeping the first non-null value.\n",
+    "    - `clean_csv(input_file, output_file, min_valid_count=2500, debug=True)`: Reads, cleans, and saves a CSV file. It performs unit conversions, combines similar columns, and filters out columns with less than a specified number of non-null values.\n",
+    "\n",
+    "5. **Loading and Cleaning Data**:\n",
+    "    - The notebook reads the input CSV file, applies the cleaning functions, and saves the cleaned data to an output CSV file.\n",
+    "\n",
+    "6. **Counting NaN Values**:\n",
+    "    - `count_nans(df)`: Returns the total number of NaN values in the DataFrame.\n",
+    "    - The notebook counts the number of NaN values before and after cleaning to evaluate the effectiveness of the cleaning process.\n",
+    "\n",
+    "7. **Summary of Variables**:\n",
+    "    - Various variables such as `COLUMN_GROUPS`, `COLUMN_MAPPING`, `UNIT_CONVERSIONS`, and dataframes like `df_original`, `df_cleaned`, and `df_merged` are defined and used throughout the notebook.\n",
+    "\n",
+    "8. **Example Usage**:\n",
+    "    - The notebook provides example usage of the cleaning functions with specific input and output file paths.\n",
+    "\n",
+    "Overall, this notebook provides a comprehensive workflow for cleaning and preprocessing a dataset of supercomputers, ensuring consistency and reducing the number of missing values.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +604,7 @@
        "[32000 rows x 47 columns]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
