refactor csv_clean notebook by commenting out unused code and updating execution counts

--- a/csv_clean.ipynb
+++ b/csv_clean.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,73 +58,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Owner\\AppData\\Local\\Temp\\ipykernel_13000\\433935421.py:25: DtypeWarning: Columns (29,30,37,39,41,46,48) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(input_file)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cleaned CSV saved to c:\\VSCode\\360\\top500_data\\merged_top500_clean.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Define similar column groups\n",
-    "COLUMN_GROUPS = {\n",
-    "    \"Processors\": [\"Processors\", \"Cores\", \"Total Cores\"], #completed and verified my hand\n",
-    "    \"RMax (Flop/s)\": [\"RMax\", \"Rmax\", \"Rmax [TFlop/s]\"], #completed and verified my hand\n",
-    "    \"RPeak (Flop/s)\": [\"RPeak\", \"Rpeak\", \"Rpeak [TFlop/s]\"],\n",
-    "    \"Power (W)\": [\"Power\", \"Power (kW)\"],\n",
-    "    \"Accelerator\": [\"Accelerator\", \"Accelerator/Co-Processor\"],\n",
-    "    \"Accelerator Cores\": [\"Accelerator Cores\", \"Accelerator/Co-Processor Cores\"]\n",
-    "}\n",
+    "# # Define similar column groups\n",
+    "# COLUMN_GROUPS = {\n",
+    "#     \"Processors\": [\"Processors\", \"Cores\", \"Total Cores\"], #completed and verified my hand\n",
+    "#     \"RMax (Flop/s)\": [\"RMax\", \"Rmax\", \"Rmax [TFlop/s]\"], #completed and verified my hand\n",
+    "#     \"RPeak (Flop/s)\": [\"RPeak\", \"Rpeak\", \"Rpeak [TFlop/s]\"],\n",
+    "#     \"Power (W)\": [\"Power\", \"Power (kW)\"],\n",
+    "#     \"Accelerator\": [\"Accelerator\", \"Accelerator/Co-Processor\"],\n",
+    "#     \"Accelerator Cores\": [\"Accelerator Cores\", \"Accelerator/Co-Processor Cores\"]\n",
+    "# }\n",
     "\n",
-    "def combine_columns(df):\n",
-    "    \"\"\"Merges similar columns into a single column, keeping the first non-null value.\"\"\"\n",
-    "    for new_col, old_cols in COLUMN_GROUPS.items():\n",
-    "        found_cols = [col for col in old_cols if col in df.columns]\n",
+    "# def combine_columns(df):\n",
+    "#     \"\"\"Merges similar columns into a single column, keeping the first non-null value.\"\"\"\n",
+    "#     for new_col, old_cols in COLUMN_GROUPS.items():\n",
+    "#         found_cols = [col for col in old_cols if col in df.columns]\n",
     "        \n",
-    "        if len(found_cols) > 1:\n",
-    "            df[new_col] = df[found_cols].bfill(axis=1).iloc[:, 0]  # Take first non-null value\n",
-    "            df.drop(columns=[col for col in found_cols if col != new_col], inplace=True)  # Drop duplicates\n",
+    "#         if len(found_cols) > 1:\n",
+    "#             df[new_col] = df[found_cols].bfill(axis=1).iloc[:, 0]  # Take first non-null value\n",
+    "#             df.drop(columns=[col for col in found_cols if col != new_col], inplace=True)  # Drop duplicates\n",
     "\n",
-    "    return df\n",
+    "#     return df\n",
     "\n",
-    "def clean_csv(input_file, output_file):\n",
-    "    \"\"\"Reads, cleans, and saves a CSV file.\"\"\"\n",
+    "# def clean_csv(input_file, output_file):\n",
+    "#     \"\"\"Reads, cleans, and saves a CSV file.\"\"\"\n",
     "    \n",
-    "    df = pd.read_csv(input_file)\n",
-    "    df[\"Rmax [TFlop/s]\"] = df[\"Rmax [TFlop/s]\"] * 1e12\n",
-    "    df[\"Rpeak [TFlop/s]\"] = df[\"Rpeak [TFlop/s]\"] * 1e12\n",
-    "    df[\"Power (kW)\"] = df[\"Power (kW)\"] * 1e3\n",
+    "#     df = pd.read_csv(input_file)\n",
+    "#     df[\"Rmax [TFlop/s]\"] = df[\"Rmax [TFlop/s]\"] * 1e12\n",
+    "#     df[\"Rpeak [TFlop/s]\"] = df[\"Rpeak [TFlop/s]\"] * 1e12\n",
+    "#     df[\"Power (kW)\"] = df[\"Power (kW)\"] * 1e3\n",
     "    \n",
-    "    df = combine_columns(df)\n",
-    "    columns_to_keep = [col for col in df.columns if df[col].notna().sum() >= 1000]\n",
-    "    df = df[columns_to_keep]\n",
+    "#     df = combine_columns(df)\n",
+    "#     columns_to_keep = [col for col in df.columns if df[col].notna().sum() >= 1000]\n",
+    "#     df = df[columns_to_keep]\n",
     "\n",
-    "    df.to_csv(output_file, index=False)\n",
-    "    print(f\"Cleaned CSV saved to {output_file}\")\n",
+    "#     df.to_csv(output_file, index=False)\n",
+    "#     print(f\"Cleaned CSV saved to {output_file}\")\n",
     "\n",
-    "# Example usage\n",
-    "current_dir = os.getcwd()\n",
-    "input_csv = os.path.join(current_dir, \"merged_top500_nans.csv\")  # Change to your actual file\n",
-    "output_csv = os.path.join(current_dir, \"merged_top500_clean.csv\")\n",
+    "# # Example usage\n",
+    "# current_dir = os.getcwd()\n",
+    "# input_csv = os.path.join(current_dir, \"merged_top500_nans.csv\")  # Change to your actual file\n",
+    "# output_csv = os.path.join(current_dir, \"merged_top500_clean.csv\")\n",
     "\n",
-    "clean_csv(input_csv, output_csv)\n"
+    "# clean_csv(input_csv, output_csv)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +588,7 @@
        "[32000 rows x 47 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
