--- a/csv_generation.ipynb
+++ b/csv_generation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -107,6 +107,8 @@
     "import os\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
+    "\n",
+    "#python 3.11.9\n",
     "\n",
     "def convert_xls_to_csv(input_folder, output_folder):\n",
     "    # Create the output folder if it doesn't exist\n",
