--- a/csv_merge.ipynb
+++ b/csv_merge.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -85,6 +85,8 @@
    ],
    "source": [
     "#Note that the csv generation file needs to be run first for this to work (assuming only user access is to the excel files)\n",
+    "\n",
+    "#python 3.11.9\n",
     "\n",
     "import os\n",
     "import pandas as pd\n",
