fixed clean data units error

--- a/progress_report_2.ipynb
+++ b/progress_report_2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "id": "8a00b2b8",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Owner\\AppData\\Local\\Temp\\ipykernel_22648\\2011338629.py:5: DtypeWarning: Columns (25,26,30,32,34,39) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Owner\\AppData\\Local\\Temp\\ipykernel_27992\\964965853.py:6: DtypeWarning: Columns (24,25,29,31,33,38) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\"merged_top500_clean.csv\")\n"
      ]
     },
@@ -54,12 +54,12 @@
        "      <th>Nhalf</th>\n",
        "      <th>Processor Family</th>\n",
        "      <th>...</th>\n",
+       "      <th>Efficiency (%)</th>\n",
+       "      <th>Power Source</th>\n",
        "      <th>HPCG [TFlop/s]</th>\n",
        "      <th>Power Effeciency [GFlops/Watts]</th>\n",
        "      <th>Site ID</th>\n",
        "      <th>System ID</th>\n",
-       "      <th>Power Efficiency [GFlops/Watts]</th>\n",
-       "      <th>Memory</th>\n",
        "      <th>Energy Efficiency [GFlops/Watts]</th>\n",
        "      <th>RMax (Flop/s)</th>\n",
        "      <th>RPeak (Flop/s)</th>\n",
@@ -189,7 +189,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 50 columns</p>\n",
+       "<p>5 rows × 47 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -207,19 +207,19 @@
        "3   CM-5/512  United States  1993       512.0  36864.0  16384.0   \n",
        "4   SX-3/44R          Japan  1990         4.0   6400.0    830.0   \n",
        "\n",
-       "  Processor Family  ... HPCG [TFlop/s]  Power Effeciency [GFlops/Watts]  \\\n",
-       "0            Sparc  ...            NaN                              NaN   \n",
-       "1            Sparc  ...            NaN                              NaN   \n",
-       "2            Sparc  ...            NaN                              NaN   \n",
-       "3            Sparc  ...            NaN                              NaN   \n",
-       "4              NEC  ...            NaN                              NaN   \n",
+       "  Processor Family  ... Efficiency (%)  Power Source HPCG [TFlop/s]  \\\n",
+       "0            Sparc  ...            NaN           NaN            NaN   \n",
+       "1            Sparc  ...            NaN           NaN            NaN   \n",
+       "2            Sparc  ...            NaN           NaN            NaN   \n",
+       "3            Sparc  ...            NaN           NaN            NaN   \n",
+       "4              NEC  ...            NaN           NaN            NaN   \n",
        "\n",
-       "  Site ID System ID Power Efficiency [GFlops/Watts] Memory  \\\n",
-       "0     NaN       NaN                             NaN    NaN   \n",
-       "1     NaN       NaN                             NaN    NaN   \n",
-       "2     NaN       NaN                             NaN    NaN   \n",
-       "3     NaN       NaN                             NaN    NaN   \n",
-       "4     NaN       NaN                             NaN    NaN   \n",
+       "  Power Effeciency [GFlops/Watts] Site ID System ID  \\\n",
+       "0                             NaN     NaN       NaN   \n",
+       "1                             NaN     NaN       NaN   \n",
+       "2                             NaN     NaN       NaN   \n",
+       "3                             NaN     NaN       NaN   \n",
+       "4                             NaN     NaN       NaN   \n",
        "\n",
        "  Energy Efficiency [GFlops/Watts] RMax (Flop/s) RPeak (Flop/s) Power (W)  \n",
        "0                              NaN          59.7         131.00       NaN  \n",
@@ -228,16 +228,17 @@
        "3                              NaN          30.4          65.54       NaN  \n",
        "4                              NaN          23.2          25.60       NaN  \n",
        "\n",
-       "[5 rows x 50 columns]"
+       "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load the dataset\n",
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "id": "6dc71086",
    "metadata": {},
    "outputs": [
@@ -276,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "id": "93a20520",
    "metadata": {},
    "outputs": [
@@ -325,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "id": "7d848d8c",
    "metadata": {},
    "outputs": [
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "id": "ed1095b5",
    "metadata": {},
    "outputs": [
@@ -386,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "id": "521a56d5",
    "metadata": {},
    "outputs": [
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 57,
    "id": "6dd33735",
    "metadata": {},
    "outputs": [
@@ -471,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "id": "151df19e",
    "metadata": {},
    "outputs": [
@@ -503,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "id": "480e1d06",
    "metadata": {},
    "outputs": [
@@ -595,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "id": "27e2c296",
    "metadata": {},
    "outputs": [
@@ -678,7 +679,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted 2030 Rank: 2 (Top 0.4%)\n"
+      "Predicted 2030 Rank: 4 (Top 0.8%)\n"
      ]
     }
    ],
@@ -776,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 62,
    "id": "2ffdeb8a",
    "metadata": {},
    "outputs": [
@@ -784,7 +785,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted 2030 Rank: 21\n"
+      "Predicted 2030 Rank: 132\n"
      ]
     }
    ],
@@ -875,9 +876,9 @@
     "    \n",
     "    # User input for theoretical system (modify values as needed)\n",
     "    user_input = {\n",
-    "        'Year': 2030,\n",
+    "        'Year': 2050,\n",
     "        'RMax (Flop/s)': 3e9,    \n",
-    "        'Processors': 25000\n",
+    "        'Processors': 250000\n",
     "    }\n",
     "    \n",
     "    # Get prediction\n",
@@ -887,6 +888,77 @@
     "    # Get confidence interval\n",
     "    # lower, upper = bootstrap_rank(model, features, train_df)\n",
     "    # print(f\"95% Confidence Interval: {lower:.0f}-{upper:.0f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6d66c6c",
+   "metadata": {},
+   "source": [
+    "## Additional Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "5883e18d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 9.49978646637976\n",
+      "R²: 0.8818352715232224\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Keep only top 100 ranks per year\n",
+    "df_top100 = df[df.groupby(\"Year\")[\"Rank\"].rank(method=\"first\") <= 10]\n",
+    "\n",
+    "# Use filtered data\n",
+    "features = df_top100[['RPeak (Flop/s)', 'Year']]\n",
+    "target = df_top100['Rank']\n",
+    "\n",
+    "# Normalize and train (same as before)\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(features)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, target, test_size=0.2, random_state=42)\n",
+    "\n",
+    "model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(\"MAE:\", mean_absolute_error(y_test, y_pred))\n",
+    "print(\"R²:\", r2_score(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "3aaa8efa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📈 Predicted Rank: 2.35\n"
+     ]
+    }
+   ],
+   "source": [
+    "rmax_input = float(input(\"Enter RPeak (Flop/s): \"))\n",
+    "year_input = int(input(\"Enter Year: \"))\n",
+    "\n",
+    "# Format and scale the input just like training data\n",
+    "input_features = pd.DataFrame([[rmax_input, year_input]], columns=['RPeak (Flop/s)', 'Year'])\n",
+    "input_scaled = scaler.transform(input_features)\n",
+    "\n",
+    "# Predict\n",
+    "predicted_rank = model.predict(input_scaled)[0]\n",
+    "print(f\"📈 Predicted Rank: {round(predicted_rank, 2)}\")\n"
    ]
   }
  ],
